# passwd-contrl

./: .env.example  .gitignore  .npmrc  AGENT.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
.codegraph/: daemon.pid
.github/workflows/: ci.yml
.omo/run-continuation/: ses_13a54354affeZlZQvlGOWnGxwM.json
apps/desktop/: .gitignore  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns  placeholder.txt
apps/desktop/src-tauri/src/: crypto.rs  db.rs  keychain.rs  lib.rs  main.rs
apps/extension/: VERIFICATION.md  bridge.html  manifest.json  package.json  playwright.config.ts  popup.html  tsconfig.json  vitest.config.ts
crates/crypto-core/: Cargo.toml  MOBILE_PLAN.md
crates/crypto-core/src/: lib.rs
docs/: DESIGN.md  architecture.md  autofill.md  browser-compatibility.md  cloudflare-deployment.md  cloudflare-migration-plan.md  cloudflare-provisioning.md  deployment.md  development.md  device-trust.md  e2e-test-plan.md  import.md  incident-response.md  migration-risk-checklist.md  mobile-development.md  phase3-plan.md  recovery.md  release-checklist.md  release-gate.md  release-process.md  roadmap.md  rust-environment.md  security-audit-report.md  security-checklist.md  security-model.md  sync-protocol.md  testing.md  threat-model.md  ui-development.md  ui-prototype-prompt.md  ui-verification-checklist.md  web-integration-plan.md
(+361 files in other folders)
