[package]
name = "crypto-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
thiserror = "1.0"
wasm-bindgen = "0.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
hex = "0.4"
